edit index file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Дипломный проект Бортников С.В.</title>
 </head>
 <body>
-  <h1>Это вэб-сервер $HOSTNAME </h1>
+  <h1>Это демонстрационный вэб-сервер  </h1>
 
     <img src="hero.jpg" alt="hero"> 
 
